<resources>
    <string name="app_name">OpraT 10.0</string>
    <string name="ContBoton">TODO</string>
    <string name="CalcBoton">TODO</string>
    <string name="imgBoton">TODO</string>
    <string name="FullBoton">TODO</string>
    <string name="RadioBotton">TODO</string>
    <string name="SalirBoton">salir</string>
    <string name="crew_start">CREW START</string>
    <string name="crew_finish">Crew Finish</string>
    <string name="a_c_start">A/C Start</string>
    <string name="a_c_finish">A/C Finish</string>
    <string name="nocturne">Noc</string>
    <string name="crew">Crew</string>
    <string name="vfr">VFR</string>
    <string name="ifr">IFR</string>
    <string name="a_c">Aircraft</string>
    <string name="_00">00</string>
    <string name="_000">0000</string>
    <string name="_0">0</string>
    <string name="_00_00">00:00</string>
    <string name="_2">:</string>
    <string name="todo">TODO</string>
    <string name="igual">=</string>
    <string name="Quantity">Quantity</string>
    <string name="Fuel_IN">Fuel IN</string>
    <string name="Fuel_OUT">Fuel OUT</string>
    <string name="Eng_SD">ENG S/D</string>
    <string name="TO_Fuel">TO Fuel</string>
    <string name="LND_Fuel">LND Fuel</string>
    <string name="Fuel_Trip">Fuel TRIP</string>
    <string name="Remain">REMAIN</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="lbs">LBS</string>
    <string name="kg">KG</string>
    <string name="image">TODO</string>
    <string name="tvFecha">Ingresar Fecha</string>
    <string name="etRegistro">Registro</string>
    <string name="TipoAeronave">Tipo</string>
    <string name="Matricula">Matricula</string>
    <string name="Flight">Flight</string>
    <string name="Set">Set</string>
    <string name="Vuelo">No Vuelo</string>
    <string name="IdVuelo">No ID</string>
    <string name="De">De</string>
    <string name="A">A</string>
    <string name="TiempoTripulacion">Tiempo Tripulacion</string>
    <string name="TiempoAeronave">Tiempo Aeronave</string>
    <string name="CondicionVuelo">Condicion De Vuelo:</string>
    <string name="Pax">Pax</string>
    <string name="Carga">Carga Kg</string>
    <string name="Fuel">Fuel</string>
    <string name="TotalTrip">Total Trip:</string>
    <string name="TotalAero">Total Aero:</string>
    <string name="Prendida">Prendida</string>
    <string name="Decolaje">T/O</string>
    <string name="Aterrizaje">LND</string>
    <string name="Apagada">Apagada</string>
    <string name="Add">Guardar</string>
    <string name="Titulo">Bitacora de Vuelo</string>
    <string name="Buscar">Consultar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Modificar">Modificar</string>
    <string name="PDF">PDF</string>
    <string name="Registros">Administrar Vuelos:</string>
    <string name="RegistrosFuel">Registro de Combustible en Vuelo</string>
    <string name="tvRegistro">Registro:</string>
    <string name="tvNumVuelo">Vuelo No:</string>
    <string name="tvOrigen">Origen:</string>
    <string name="tvDestino">Destino:</string>
    <string name="etTow">TOW</string>
    <string name="etFuelMin">Fuel MIN</string>
    <string name="etAltura">ALT CRC</string>
    <string name="tvFuelFlow">Fuel Flow:</string>
    <string name="etEngine1">FF ENG1</string>
    <string name="etEngine2">FF ENG2</string>
    <string name="etVelocidad">MACH/IAS</string>
    <string name="tvCaculosFuel">Calculo del Combustible:</string>
    <string name="tvVacio">---------</string>
    <string name="tvConsumo">Consumo:</string>
    <string name="radio">Datos Radio Operador</string>
    <string name="Doors">Puertas: </string>
    <string name="Despegue">Decolaje: </string>
    <string name="Aterriza">Aterrizaje: </string>
    <string name="Hombres">H: </string>
    <string name="Mujeres">M: </string>
    <string name="Ninos">N: </string>
    <string name="Nibra">NB: </string>
    <string name="ComRemanente"> Remanente: </string>
    <string name="NumFAC">FAC: </string>
    <string name="etVacio"> </string>
    <string name="btRadio">R/O</string>
    <string name="tvTituloContador">Contador Personal</string>
    <string name="horaTSN">TSN:</string>
    <string name="horaQuincena">FN:</string>
    <string name="horaCont">Actuales:</string>
    <string name="horasFaltan">Faltantes:</string>
    <string name="horaHoy">Daily:</string>
    <string name="horaSemana">Fornightly:</string>
    <string name="horaMes">Montlhy:</string>
    <string name="horaAno">Annual:</string>
    <string name="horaObjetivo">Objetivo:3K</string>
    <string name="tituloConsulta">Consulta Contador 3K</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="restar">-</string>
    <string name="sumar">+</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="resultado">=</string>
    <string name="RestarurarValores">C</string>
    <string name="TextView">0</string>
    <string name="limpiar">CR</string>
    <string name="tvTituloCal">Calculadora De Tiempos</string>
    <string name="btCaloperacion">Time Cal</string>
    <string name="copyRight">OpraT© Andres Becerra</string>

</resources>
